@@ -5,19 +5,11 @@ void procr_transform_wrapper(int *S, int *n, int *d, int *G, double *vZo,
 
 
 void procr_alloc(int n, int d, int G,
-		 double ***A, double ***tZ, double ***tZo, double ***Ahalf, 
-		 double ***AhalfInv, double ***tptrans, double ***eAvectors, 
-		 double ***eADvalues, double ***teAvectors, double **avZ, 
-		 double **eAvalues, double ***dd_helper, 
-		 double ***dn_helper, double ***dd2_helper,
+		 double **avZ, double ***tZZo, double ***U, double **S, double ***tV,
 		 double **workspace);
 
-int procr_transform(double **Z, double **Z_mu, double **Zo, int n, int d, int G,
-		    double **pZ, double **pZ_mu,
-		    double **A, double **tZ, double **tZo, double **Ahalf, 
-		    double **AhalfInv, double **tptrans, double **eAvectors, 
-		    double **eADvalues, double **teAvectors, double *avZ, 
-		    double *eAvalues, double **dd_helper, 
-		    double **dn_helper, double **dd2_helper,
+int procr_transform(double **Z, double **Z_mean, double **Zo, int n, int d, int G,
+		    double **pZ, double **pZ_mean,
+		    double *avZ, double **tZZo, double **U, double *S, double **tV,
 		    double *workspace);
 #endif
